# complianceGaurd

./: .env.example  .env.production.free.example  .gitignore  README.md  SECURITY.md  render.yaml
backend/: .bandit  nixpacks.toml  pyproject.toml  pytest.ini  railway.toml  requirements.txt  ruff.toml  run-api.ps1
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_fix_audit_logs_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  cors_utils.py  database.py  logging.py  security.py
backend/app/domain/: enums.py
backend/app/middleware/: cors_fallback.py  security.py
backend/app/models/: __init__.py  audit.py  base.py  finding.py  organization.py  report.py  scan.py  session.py  target.py  types.py  user.py
backend/app/scanners/: __init__.py  base.py  http_security_probe.py  nmap_adapter.py  nuclei_adapter.py  zap_adapter.py
backend/app/schemas/: auth.py  scan.py
backend/app/services/: ai_service.py  audit_service.py  auth_service.py  compliance_engine.py  demo_findings.py  finding_resolution.py  findings_engine.py  report_service.py  scan_service.py  target_validation.py
backend/app/workers/: celery_app.py  mock_orchestrator.py  queue.py  scan_failures.py  tasks.py
backend/data/: compliance_controls.json  demo_findings.json
backend/scripts/: init_db.py  live_scan_test.py  proxy_scan_test.py  render_start.sh  repro_scan_500.py  test_scan_create.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_flow.py
backend/tests/load/: locustfile.py
backend/tests/security/: test_auth_security.py  test_idor.py  test_ssrf_protection.py
backend/tests/unit/: test_ai_provider.py  test_demo_findings.py  test_finding_resolution.py  test_findings_engine.py  (+1 more)
docker/: nginx.conf  (+8 more)
(+68 files in other folders)
