[project]
name = "complianceguard-backend"
version = "1.0.0"
description = "ComplianceGuard - AI-powered infrastructure compliance platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1.0",
    "pyotp>=2.9.0",
    "qrcode>=8.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "anthropic>=0.40.0",
    "openai>=1.55.0",
    "reportlab>=4.2.0",
    "cryptography>=43.0.0",
    "python-multipart>=0.0.12",
    "email-validator>=2.2.0",
    "aiosmtplib>=3.0.0",
    "defusedxml>=0.7.1",
    "bleach>=6.2.0",
    "slowapi>=0.1.9",
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "ipaddress>=1.0.23",
    "validators>=0.34.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    "faker>=33.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit>=1.8.0",
    "safety>=3.2.0",
    "pip-audit>=2.7.0",
    "locust>=2.32.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "S", "B", "A", "C4", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
